interactive/src/css/_common.scss
@import "mq";
@import "flags";

$gold: rgba(250,220,2,1);
$silver: rgba(217,217,217,1);
$bronze: rgba(243,111,33,1);

$goldLight: rgba(250,220,2,0.2);
$silverLight: rgba(217,217,217,0.4);
$bronzeLight: rgba(243,111,33,0.2);

body {
    @include fs-bodyCopy(2);
    margin: 0;
    padding: 0;
    background-color: #f6f6f6;
    color: #333;
}

// Link styles don't exist on the app
a {
    &,
    &:hover,
    &:active {
        color: #005689;
    }

    text-decoration: none;
    &:hover {
        text-decoration: underline;
    }
}

.om-container,
.om-header__inner,
.om-filter__inner {
    margin: 0 auto;
    box-sizing: border-box;

    @each $bp in (tablet, desktop, leftCol, wide) {
        @include mq($bp) {
            max-width: map-get($mq-breakpoints, $bp);
        }
    }
}

.om-container {
    background-color: white;
    border-bottom: 1px solid white;
}

.om-header__inner,
.om-filter__inner {
    padding: 0 10px;
    position: relative;

    @include mq(mobileLandscape) {
        padding: 0 20px;
    }
    @include mq(leftCol) {
        padding-left: 180px;
    }
    @include mq(wide) {
        padding-left: 260px;
    }
}

.om-filter {
    background-color: #f0dc00;
    line-height: 35px;

}

.om-filter__inner {
    @include fs-bodyCopy(1);
    background-color: #fbe400;
}

.om-filter__line {
    display: block;
    margin-bottom: 2px;
    &:last-child {
        margin-bottom: 0;
    }
    @include mq(mobileLandscape) {
        display: inline;
    }
}

.om-filter__choice {
    @include fs-header(1);
    background-color: #fff7aa;
    border: 0;
    height: 35px;
    outline: 0;
    margin: 0 5px;
    padding-left: 5px;
    width: 160px;
    cursor: pointer;

    &[disabled] {
        background-color: transparent;
        color: #333;
        -webkit-appearance: none;
        -moz-appearance: none;
        appearance: none;
        cursor: auto;
    }
}

.om-error {

    @include fs-textSans(3);
    display: none;

    &.has-error {
        display: block;
    }
}

.om-date-schedule {
    position: relative;

    &::before {
        content: "";
        position: absolute;
        left: 0;
        right: 0;
        top: 0;
        bottom: 0;
        background-color: transparent;
        transition: background-color 0.1s linear;
    }
    &.is-loading::before {
        z-index: 100;
        background-color: transparentize(white, 0.2);
    }
}
.om-section-schedule {
    @include mq(tablet) {
        min-height: 800px !important;
    }
}

.om-section {
    position: relative;
    max-width: 660px;
    min-height: 60px;
    margin-bottom: 32px;

    padding: 10px;
    @include mq(mobileLandscape) {
        padding: 12px 20px;
    }
    @include mq(leftCol) {
        padding-left: 180px;
    }
    @include mq(wide) {
        padding-left: 260px;
    }

    &.om-section--divider {
        border-top: 1px solid #eaeaea;
        &:first-child {
            border-top: 0;
        }
    }

    &.om-section--hidden {
        display: none;
    }
}

.om-section__title {
    @include fs-header(2);
    font-weight: 600;
    margin: 0 0 6px;
    @include mq(leftCol) {
        position: absolute;
        left: 20px;
        width: 140px;
    }
    @include mq(wide) {
        width: 220px;
    }
}

.om-medal,
.om-qualified {
    display: inline-block;
    box-sizing: border-box;
    width: 12px;
    height: 12px;
    border-radius: 10px;
    background: #fff;
    margin-right: 4px;
    margin-bottom: -1px;
}

.om-medal {
    &.om-medal--bronze { background-color: $bronze; }
    &.om-medal--silver { background-color: $silver; }
    &.om-medal--gold { background-color: $gold; }
}

.om-qualified {
    border-color: #4a7801;
}

.om-schedule-date {
    margin: 0;
    font-size: inherit;

    & > span {
        white-space: nowrap;
    }
}

.om-schedule-date-no {
    @include fs-textSans(3);
    font-weight: normal;
    color: #bdbdbd;
    margin: 0;
}

.om-discipline.is-hidden {
    display: none;
}

.om-no-events.is-hidden {
    display: none;
}

.om-no-events {
    @include fs-textSans(3);
}

.om-discipline__name {
    @include fs-header(2);
    font-weight: 500;
    margin: 0;
}

.om-discipline__venue {
    @include fs-textSans(2);
    margin: 0 0 2px;

    @include mq(mobileLandscape) {
        @include fs-textSans(3, $size-only: true);
    }
}

.om-events {
    list-style: none;
    margin: 0 0 12px;
    padding: 0;
}

.om-event {
    @include fs-textSans(1);
    position: relative;
    border-top: 1px dotted #bdbdbd;
    padding: 5px 25px 3px 65px;

    @include mq(mobileLandscape) {
        @include fs-textSans(2, $size-only: true);
        padding-left: 80px;
    }

    &.om-event--finished.is-expanded {
        background-color: white;
        color: #333;
        &,
        & + .om-event {
            border-top-style: solid;
        }
    }

}

.om-no-results {
    @include fs-textSans(3);
}

.om-result {
    border-spacing: 0;
    border-collapse: collapse;
    width: 100%;
    margin: 0 0 18px;

    thead {
        border-bottom: 1px solid #dcdcdc;
        vertical-align: bottom;
    }

    th {
        font-size: 11px;
        font-weight: 500;
        line-height: 14px;
        color: #999;
        padding: 1px 0;
        text-align: left;
    }
    td {
        vertical-align: middle;
        padding: 3px 0;
    }
    td,
    th {
        padding-left: 4px;
        padding-right: 4px;
        &:first-child {
            padding-left: 0;
        }
        &:last-child {
            padding-right: 0;
        }
    }
}

.om-result__cat {
    text-align: center;
}

.om-entrant {
    border-bottom: 1px solid #eaeaea;
    &:last-child {
        border-bottom: 0;
    }
}

.om-entrant__header {
    border-left: 1px dotted #eaeaea;
}

.om-entrant__name {
    width: 100%;
    overflow: hidden;
    text-overflow: ellipsis;
    max-width: 0;
    white-space: nowrap;
}

.om-entrant__name__note {
    font-size: 11px;
    color: #999;
    margin: -3px 0 0;
}

.om-entrant__round {
    width: 30px;
    text-align: center;
    border-left: 1px dotted #eaeaea;
    font-size: 11px;
    color: #999;

    @include mq(mobileLandscape) {
        font-size: 12px;
    }

    &.om-entrant__round--winner {
        color: #333;
        font-weight: 500;
    }
}

.om-entrant__splits {
    border-left: 1px dotted #eaeaea;
    white-space: nowrap;
    text-align: center;
}

.om-entrant__split {
    display: inline-block;
    width: 6px;
    height: 6px;
    border: 2px solid white;
    border-radius: 100px;
    background-color: #efefef;
    vertical-align: middle;

    $positionColors: (pos-1: $gold, pos-2: $silver, pos-3: $bronze, qual: #4a7801);
    @each $pos, $color in $positionColors {
        &.om-entrant__split--#{$pos} {
            background-color: transparent;
            border-color: $color;
        }
    }
}

.om-entrant__result {
    text-align: right;
    white-space: nowrap;
    border-left: 1px dotted #eaeaea;

    & > span {
        display: inline-block;
        width: 100%;
        background-color: #f1f1f1;
        border-radius: 2px;
        border: 1px solid #dfdfdf;
        text-align: center;
    }
}

.om-entrant__extra {
    border-left: 1px dotted #eaeaea;
    display: none;
    @include mq(tablet) {
        display: table-cell;
    }
}

.om-event__time {
    position: absolute;
    min-width: 33px;
    @include mq(mobileLandscape) {
        min-width: 35px;
    }
    left: 3px;
    & > time.is-next-day {
        &::before { content: "("; }
        &::after { content: ")"; }
    }
}

.om-event__name {
    font-weight: 500;
}

.om-event__name__events {
    font-weight: normal;
}

.om-event__venue {
    white-space: nowrap;
}

.om-event__result {
    margin: 12px -22px 0 -62px;
    @include mq(mobileLandscape) {
        margin-left: 0;
        margin-right: 0;
    }

    display: none;
    .is-expanded & {
        display: block;
    }

    &.om-event__result--grey {
        background-color: #f6f6f6;
        padding: 6px 5px;
        box-sizing: border-box;

        .om-result {
            margin-bottom: 0 !important;
        }
    }
}

.om-event__expand {
    position: absolute;
    top: 5px;
    right: 3px;
    width: 16px;
    height: 16px;
    background-size: 100% 100%;

    display: none;

    .om-event:not(.om-event--finished):not(.om-event--awaiting) & {
        background-image: url(assets/imgs/clock.svg);
        display: block;
    }

    .om-event--awaiting & {
        width: auto;
        right: 0px;
        color: #bdbdbd;

        &::after {
            content: 'awaiting result';
        }
    }

    .is-expandable & {
        display: block;
    }

    .om-event.om-event--results & {
        background-image: url(assets/imgs/plus.svg);
    }
    .om-event.om-event--results.is-expanded & {
        background-image: url(assets/imgs/minus.svg);
    }
}

.om-event__clicker {
    position: absolute;
    background: url(#);
    z-index: 2;
    left: 0;
    right: 0;
    top: 0;
    bottom: 0;
    .is-expandable & {
        cursor: pointer;
    }
}

.om-tz-note {
    @include fs-textSans(3);
    margin: 0 0 6px;
    .has-no-events & {
        display: none;
    }
}

.om-empty-message {
    display: none;
    .has-no-events & {
        display: block;
    }
}

@include mq($from: leftCol) {
    .om-section {
        margin-bottom: 0;
    }
}

